[gd_scene load_steps=6 format=3 uid="uid://bgrpq825tix4"]

[ext_resource type="Script" uid="uid://d0xt6a7jjdx2i" path="res://scripts/end_game_screen.gd" id="1_70b0o"]
[ext_resource type="Texture2D" uid="uid://dp0ubessoib7m" path="res://assets/images/You Died.jpg" id="2_70b0o"]
[ext_resource type="FontFile" uid="uid://vskax0le4ltp" path="res://fonts/BRLNSDB.TTF" id="3_70b0o"]
[ext_resource type="Texture2D" uid="uid://c2gtwe05dasih" path="res://assets/images/Death Icon.png" id="4_ubscq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubscq"]
texture = ExtResource("2_70b0o")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70b0o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ubscq")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = -90.0
offset_right = 418.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_70b0o")
theme_override_font_sizes/font_size = 64
text = "You Died"
horizontal_alignment = 1

[node name="GenerationsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_70b0o")
theme_override_font_sizes/font_size = 36
text = "Number of generations: 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_70b0o")
text = "Exit"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_70b0o")
text = "Retry"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 192.0
offset_right = -100.0
offset_bottom = 251.0
grow_horizontal = 0
rotation = 0.270526
texture = ExtResource("4_ubscq")
expand_mode = 1

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
